--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -3,43 +3,64 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
+      xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:b="http://bootsfaces.net/ui">
     <h:head>
         <title>Välkommen till brädspelsshoppen!</title>
     </h:head>
     <h1>Brädspelsshoppen</h1>
     <h:link outcome="admin.xhtml" value="Admin" />
-    <h:link outcome="cart.xhtml" value="Kundvagn" />
+    <!-- Kundvagn visas på samma sida -->
+    <!--<h:link outcome="cart.xhtml" value="Kundvagn" />-->
     
     <h:body>
-        <h:form id="tableForm"> 
-            <h:dataTable id="mainTable" value="${articleBean.articles}" var="article">
-                <h:column>
-                    <h:graphicImage url="${article.imageUrl}" />
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Namn</f:facet>
-                    <h:outputText style="" value="${article.name}"></h:outputText>
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Publicerad</f:facet>
-                    <h:outputText value="${article.publishedYear}" />
-                </h:column>
-                <h:column>
-                    <f:facet name="header">Pris</f:facet>
-                    <h:outputText value="${article.price}" />
-                </h:column>
-                <h:column>
-                    <f:facet name="header"></f:facet>
-                    <h:commandLink id="removeLink" value="Köp" action="${cartBean.addArticle(article)}">
-                        <f:ajax render="@form" />
-                    </h:commandLink>
-                </h:column>
-            </h:dataTable>
-            <h:commandButton rendered="${articleBean.anyItemEditable}" value="Uppdatera alla" action="${articleBean.saveUpdatesAction()}">
-                <f:ajax render="@form" execute="@form" />
-            </h:commandButton>
-        </h:form>
+        <b:container>
+                <b:column col-lg="6" col-md="6" col-xs="12">
+                    <b:panel title="Varor">
+                        <h:form id="tableForm"> 
+                            <h:dataTable id="mainTable" value="${articleBean.articles}" var="article">
+                                <h:column>
+                                    <h:graphicImage url="${article.imageUrl}" />
+                                </h:column>
+                                <h:column>
+                                    <f:facet name="header">Namn</f:facet>
+                                    <h:outputText style="" value="${article.name}"></h:outputText>
+                                </h:column>
+                                <h:column>
+                                    <f:facet name="header">Publicerad</f:facet>
+                                    <h:outputText value="${article.publishedYear}" />
+                                </h:column>
+                                <h:column>
+                                    <f:facet name="header">Pris</f:facet>
+                                    <h:outputText value="${article.price}" />
+                                </h:column>
+                                <h:column>
+                                    <f:facet name="header"></f:facet>
+                                    <h:commandLink id="removeLink" value="Köp" action="${cartBean.addArticle(article)}">
+                                        <f:ajax render="@form" />
+                                    </h:commandLink>
+                                </h:column>
+                            </h:dataTable>
+                            <h:commandButton rendered="${articleBean.anyItemEditable}" value="Uppdatera alla" action="${articleBean.saveUpdatesAction()}">
+                                <f:ajax render="@form" execute="@form" />
+                            </h:commandButton>
+                        </h:form>
+                    </b:panel>
+                </b:column>
+                <b:column col-lg="6" col-sm="6" col-xs="12">
+                    <b:panel title="Kundvagn">
+                        <h:form id="cartForm">
+                            <h:dataTable id="cartDataTable" value="${cartBean.cartRows}" var="cart">
+                                <h:column>
+                                    <f:facet name="header">#</f:facet>
+                                    <h:outputText value="${cartBean.totalCartRows}"></h:outputText>
+                                </h:column>
+
+                            </h:dataTable>
+                        </h:form>
+                    </b:panel>
+                </b:column>
+        </b:container>
     </h:body>
 </html>
 
