--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -89,7 +89,7 @@
                             <br/>
                             <br/>
                             <h:commandLink rendered="${cartBean.cartNotEmpty}" action="${cartBean.checkOut()}">
-                                <b:button value="Checka Ut" look="primary"/>
+                                <b:button value="Beställ" look="primary"/>
                             </h:commandLink>
                         </h:form>
                     </b:panel>
