Fixed SQL Issues, fixex CartBeans connection to Order-Model

--- a/web/admin.xhtml
+++ b/web/admin.xhtml
@@ -9,10 +9,9 @@
         <title>Brädspelsshoppen - Administrera</title>
     </h:head>
     <h:body>
-        <b:navBar brand="Brädspelsshopen" brandHref="#" inverse="true">
+        <b:navBar brand="Brädspelsshopen" brandHref="./index.xhtml" inverse="true">
             <b:navbarLinks>
-                <b:navLink value="Huvudsidan" outcome="index.xhtml"></b:navLink>
-                <b:navLink value="Administration" href="#"></b:navLink>          
+                <b:navLink value="Administration" outcome="admin.xhtml"></b:navLink>          
             </b:navbarLinks>
         </b:navBar>
         <b:container>
